升级gift相关代码格式